test/run_pass/higher_order_function.pine
# output:43
extern def print_int : int -> unit

def apply f, x do
  f(x)
end

def add_one n do
  n + 1
end

def main do
  let one = apply(add_one, 42) in
  let _ = print_int(one) in
  0
end
